Revised section BERT in chapter SOTA

--- a/bericht/DataMining.bib
+++ b/bericht/DataMining.bib
@@ -62,16 +62,31 @@
   publisher = {Oxford University Press ({OUP})},
 }
 
-@Article{Liu2021,
-  author      = {Xiao Liu and Da Yin and Xingjian Zhang and Kai Su and Kan Wu and Hongxia Yang and Jie Tang},
-  title       = {OAG-BERT: Pre-train Heterogeneous Entity-augmented Academic Language Model},
-  abstract    = {To enrich language models with domain knowledge is crucial but difficult. Based on the world's largest public academic graph Open Academic Graph (OAG), we pre-train an academic language model, namely OAG-BERT, which integrates massive heterogeneous entities including paper, author, concept, venue, and affiliation. To better endow OAG-BERT with the ability to capture entity information, we develop novel pre-training strategies including heterogeneous entity type embedding, entity-aware 2D positional encoding, and span-aware entity masking. For zero-shot inference, we design a special decoding strategy to allow OAG-BERT to generate entity names from scratch. We evaluate the OAG-BERT on various downstream academic tasks, including NLP benchmarks, zero-shot entity inference, heterogeneous graph link prediction, and author name disambiguation. Results demonstrate the effectiveness of the proposed pre-training approach to both comprehending academic texts and modeling knowledge from heterogeneous entities. OAG-BERT has been deployed to multiple real-world applications, such as reviewer recommendations for NSFC (National Nature Science Foundation of China) and paper tagging in the AMiner system. It is also available to the public through the CogDL package.},
-  date        = {2021-03-03},
-  eprint      = {2103.02410},
-  eprintclass = {cs.CL},
-  eprinttype  = {arXiv},
-  file        = {:http\://arxiv.org/pdf/2103.02410v1:PDF},
-  keywords    = {cs.CL},
+@Misc{Liu2021,
+  author        = {Xiao Liu and Da Yin and Xingjian Zhang and Kai Su and Kan Wu and Hongxia Yang and Jie Tang},
+  title         = {OAG-BERT: Pre-train Heterogeneous Entity-augmented Academic Language Models},
+  year          = {2021},
+  archiveprefix = {arXiv},
+  eprint        = {2103.02410},
+  primaryclass  = {cs.CL},
+}
+
+@Misc{Devlin2018,
+  author        = {Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
+  title         = {BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+  year          = {2019},
+  archiveprefix = {arXiv},
+  eprint        = {1810.04805},
+  primaryclass  = {cs.CL},
+}
+
+@Misc{Cheng2020,
+  author       = {Peter Cheng},
+  howpublished = {GitHub},
+  month        = oct,
+  title        = {Transformers.jl Version 0.1.7},
+  year         = {2020},
+  url          = {https://github.com/chengchingwen/Transformers.jl},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
