--- a/bericht/sections/stateOfTheArt.tex
+++ b/bericht/sections/stateOfTheArt.tex
@@ -30,13 +30,13 @@ Since finetuning tasks are quite specific, the details depend on the selected ta
 %\end{itemize}
 
 \section{BioBERT}
-BioBERT is one of the extensions of BERT which has emerged because BERT by itself did not yield the desired results in the biomedical landscape. This observation has often been related to the differences in word distributions between a general domain such as Wikipedia, on which BERT was trained and the highly specialized words that are used often or with this meaning only in the corresponding domain. This difference in the underlying corpora not only produces differences in the architecture of the model itself but implies a possible need for adjustments to the used vocabulary and the tokenizer. \cite{Lee2019} 
+BioBERT can be viewed as an extension of BERT that emerged because BERT alone was not yielding the desired results in the biomedical domain. This observation has often been associated with the differences in word distributions between a general domain such as Wikipedia, on which BERT had been trained, and the highly specialized words that are frequently used or used in that sense only in the corresponding domain. This difference in the underlying corpora not only implies that adaptations in the architecture of the model itself might be necessary, but moreover implies a possible need for adaptations in the vocabulary and tokenizer being used. \cite{Lee2019} 
 \newline
-Based on this prior knowledge, it was hypothesized that a model that takes these particularities into account should perform significantly better than general models in tasks of this specific domain. Based on this hypothesis, BioBERT was created. A model that should be better adapted to the biomedical domain than BERT.
+Based on the knowledge that the vocabulary may differ significantly, it was hypothesized that a model that takes these features into account should perform significantly better on tasks within that specific domain than models that are more general and may not even have seen that domain previously. Based on this hypothesis, BioBERT was created. A model that is supposed to be better adapted to the biomedical domain than BERT. 
 \newline
-Nevertheless, BioBERT itself is only a further trained version of BERT. This means the original BERT model was used as the basis and further trained on either PubMed abstracts, PubMed central full-text articles, or on both. Therefore the authors chose to keep the original BERT vocabulary to be able to use the pretrained version of BERT as the basis. This had the advantage that the original model only needed to be further trained on the new corpus and the needed training time could be reduced. For the tokenizer WordPiece was used to handle the problem with unknown words. It was also considered to create a new vocabulary, but this idea was discarded in order to preserve the previously mentioned advantage of being able to utilize the pre-trained BERT model to save resources. 
+Nevertheless, BioBERT itself is just a further trained version of BERT. This means that the original BERT model was used as a base and further trained on either PubMed abstracts, PubMed Central full-text articles, or both. Therefore, the authors chose to retain the original BERT vocabulary in order to use the pre-trained version of BERT as a foundation. This had the advantage that the original model only needed to be further trained on the new corpus and the required training time could be reduced significant. % <- das hier fehlt noch 
+For the tokenizer WordPiece was used to handle the problem with unknown words. It was also considered to create a new vocabulary, but this idea was discarded in order to preserve the previously mentioned advantage of being able to utilize the pre-trained BERT model to save resources. 
 As a result, it was observed that BioBERT performed better than BERT in version 1.0 that was based on PubMed abstracts and the full text articles of PubMed Central biomedical landscape with very few exceptions. Although the actual measured improvements sometimes vary quite significantly, it can be safely concluded that even continued training of BERT on a biomedical corpus can lead to significant improvements on tasks from this domain. 
-
 
 \section{S2ORC-BERT}
 S2ORC, known as the Semantic Scholar Open Research Corpus, is a corpus that contains a large number of papers as well as metadata and the references associated with the papers. According to the authors, the full text portion of the corpus alone is the largest structured academic text corpus available in April 2020. This corpus is based on semantic scholar papers and thus comes from several different origins. Although the main part of the paper is the acquisition and processing of papers and the resulting construction of the S2ORC corpus, the authors also use that corpus to continue training BERT. This is relatively reminiscent to the basic idea and the approach, which is also behind BioBERT, but in this case it is closer to the approach used for SciBERT. 
