--- a/bericht/sections/stateOfTheArt.tex
+++ b/bericht/sections/stateOfTheArt.tex
@@ -46,24 +46,22 @@ We will take a closer look at SciBERT at a later point in time. S2ORC-BERT, as t
 
 
 
-\section{AOG-BERT}
-	Another approach that does not only aim at matching the corpus on which BERT is trained better to the later domain, but at the same time tries to teach the model a more extensive understanding of the texts is AOG-BERT. With this further goal, however, the training strategy underlying BERT needs to be adapted as well, because as we saw earlier, BERT's pre-training is based only on a Masklm task and a Nextsentence classification. Although these two tasks together ensure that we get a decent initial model, the question remains whether specific tasks can be solved better by a more specific training in the pre-training process or by embedding additional information.
-	Based on this, one could argue that a model with domain entity knowledge could perform better than a model that does not use this information. For example, \citeauthor{Liu2021} argue that specific institutes may be more focused on specific scientific domains and that this knowledge could help the model to assign a paper to a research domain. Although it should be reasonable to assume that the actual text should be sufficient to assign a paper to a research area, this knowledge might prove beneficial for the model.
+\section{OAG-BERT}
+	Another approach that not only seeks to better match the corpus on which BERT is trained to the corresponding domain, but also simultaneously attempts to teach the model a more extensive understanding of the texts. With this further goal, however, the training strategy underlying BERT also needs to be adapted, because as we saw earlier, BERT's pretraining is based only on the MLM task and a NSP task. Although these two tasks together ensure that we obtain a reliable initial model, the question remains open whether specific tasks can be solved better by more directed training in the pretraining phase or by embedding additional information.
 	
-
-	Compared to existing approaches, OAG-BERT attempts to use not only homogeneous knowledge but also non-homogeneous knowledge from the Open Academic Graph. The information types used include authors, fields of study, venues and affiliation.
+	Based on this, one could argue that a model with domain entity knowledge might perform better than a model that does not utilize such information. For example, Xiao argue that specific institutes may have a focus on certain scientific areas and that this knowledge has the potential to support the model in assigning a paper to a research area. While one might generally assume that the actual text should also provide enough information to assign a paper to research areas, this knowledge could still turn out to be helpful for the model. 
 	
-	To integrate this information into the model, three crucial changes are made compared to BERT.  
+	Compared to existing approaches, OAG-BERT now tries to incorporate so-called non-homogeneous knowledge from the Open Academic Graph into the model. Here, non-homogeneous knowledge refers to information about authors, fields of study, venues and affiliation. 
+	To integrate this information into the model 3 crucial changes are made compared to BERT. 
 	
-	The first adaptation is the heterogeneous entity type embedding. Here, the token type embeddings are replaced with entity type embeddings, providing unique labels for the different entity types, so that it is possible to identify which input belongs to which category.
-	The next modification is the entity-aware 2D-positional encoding. Just like BERT, OAG-BERT needs positional embeddings to be aware of the sequence order. However, BERT does not have the ability to distinguish between two directly adjacent entities and would interpret them as one entity. To solve this problem, the positional embeddings in OAG-BERT are two dimensional and encode in the first dimension the so-called inter-entity sequence order and in the second dimension the intra-entity sequence order. (Final result is the sum of the two dimensions? )
+	The first adaptation is the heterogeneous entity type embedding. Here the token type embeddings are replaced by entity type embeddings, so that the different information types receive unique labels, through which it is possible to identify which input belongs to which group.  
 	
-	The last change is the span-aware entity masking. Although the masking strategy is not changed for either the abstract or the actual text, special masking is proposed for the new entity types. This is supposed to help OAG-BERT to learn complex entities especially if they consist of many tokens. This means that an entity consisting of four or less tokens is completely masked, but as soon as it is longer only a part of the entity is masked. Here the length of the mask is drawn from a geometric distribution.   
-\color{ForestGreen}
-\begin{itemize}
-	\item als kontrahend zu SciBERT \cite{Liu2021}
-\end{itemize}
-
+	The next adaptation is the Entity-aware 2D-positional encoding. Just like BERT, OAG-BERT needs positional embeddings to encode the sequence order. However, BERT does not have the ability to distinguish between two adjacent entities and would interpret them as a single one. To solve this problem, the positional embeddings in OAG-BERT are two-dimensional and encode the so-called inter-entity sequence in the first dimension and the intra-entity sequence in the second dimension.
+	
+	The last change is the span-aware entity masking. Although the masking strategy is not changed for the abstract or the actual text, a special masking is proposed for the new entity types. This is supposed to help OAG-BERT to learn complex entities especially if they consist of many tokens. So an entity consisting of four or less tokens will be completely masked, but as soon as it is longer only a part of the entity will be masked. The length of the mask is thereby drawn from a geometrical distribution.   
+	The training can be grouped in two parts, the first part is only trained with normal texts. That means only abstract, main text and the title is used. The model obtained after this training is referred to by the authors as vanilla OAG-BERT. This is in contrast to the full OAG-BERT model. To obtain this, the vanilla model was now further trained using the heterogeneous entity information. 
+	
+	In comparison with, for example, SciBERT, which was chosen by the authors for comparison, OAG-BERT performs very well in tasks involving the entities that are included under the term heterogeneous entities. However, it also shows that the gap between the two models can be greatly reduced by finetuning the entire SciBERT model. Thus, after finetuning, OAG-BERT can only significantly outperform in Venua and Affiliation and performs about as well as SciBERT in the field of study category.\cite{Liu2021}
 \section{Datasets}
 \begin{itemize}
 	\item zum Beispiel NCBI-Disease (versuch einen goldstandard für corpora zu erstellen)
