Removed Datasets from chapter SOTA

--- a/bericht/sections/stateOfTheArt.tex
+++ b/bericht/sections/stateOfTheArt.tex
@@ -62,14 +62,14 @@ We will take a closer look at SciBERT at a later point in time. S2ORC-BERT, as t
 	The training can be grouped in two parts, the first part is only trained with normal texts. That means only abstract, main text and the title is used. The model obtained after this training is referred to by the authors as vanilla OAG-BERT. This is in contrast to the full OAG-BERT model. To obtain this, the vanilla model was now further trained using the heterogeneous entity information. 
 	
 	In comparison with, for example, SciBERT, which was chosen by the authors for comparison, OAG-BERT performs very well in tasks involving the entities that are included under the term heterogeneous entities. However, it also shows that the gap between the two models can be greatly reduced by finetuning the entire SciBERT model. Thus, after finetuning, OAG-BERT can only significantly outperform in Venua and Affiliation and performs about as well as SciBERT in the field of study category.\cite{Liu2021}
-\section{Datasets}
-\begin{itemize}
-	\item zum Beispiel NCBI-Disease (versuch einen goldstandard für corpora zu erstellen)
-	\item sehr günstig um darauf entsprechende modelle zu trainieren \cite{Dogan2014}
-	\item SciERC /sciie im repo \cite{luan2018multitask}
-\end{itemize}
-\color{black}
-Due to the availability of the Datasets used by the original authors, we will use their prepared datasets, which are already prepared in a way that it is easier to use them for training and still only vary slightly from the original datasets. The datasets which we will use are directly retrieved from the SciBERT GitHub page and made available through the DataDeps package which provides an easy way to retrieve data that may or may not be locally available. If it is not already stored locally, it will be cached in the local Julia path and inside Julia, DataDeps provides the corresponding paths to the data and retrieves it from the defined source if needed. Furthermore, a hash can be defined as well to ensure that the provided data is identical to the expected one.\cite{White2019}\\
-In the following paragraph, we will take a closer look at the original data and the individual changes that have been made to use those Datasets for the training process.
-\subsection{Chemprot}
-Chemprot is in a JSON lines file format provided. More precisely every line consists of a text and the corresponding label. A field for metadata exists as well but is most of the time not used. In its original format, the Chemprot corpus consists of a develop, test, and train set of which the develop, test, and train folder correspond to the identically named files inside the chemprot folder provided on the GitHub site of SciBERT. The difference arises from a database-like structure in which the Chemprot corpus is originally provided, in contrast to those subdivided information sets where for example the text itself is in another file than the positions and annotations. Those divided pieces of information were combined and are provided in a single file in the already mentioned format. \cite{Beltagy2019,Wang2016}
+%\section{Datasets}
+%\begin{itemize}
+%	\item zum Beispiel NCBI-Disease (versuch einen goldstandard für corpora zu erstellen)
+%	\item sehr günstig um darauf entsprechende modelle zu trainieren \cite{Dogan2014}
+%	\item SciERC /sciie im repo \cite{luan2018multitask}
+%\end{itemize}
+%\color{black}
+%Due to the availability of the Datasets used by the original authors, we will use their prepared datasets, which are already prepared in a way that it is easier to use them for training and still only vary slightly from the original datasets. The datasets which we will use are directly retrieved from the SciBERT GitHub page and made available through the DataDeps package which provides an easy way to retrieve data that may or may not be locally available. If it is not already stored locally, it will be cached in the local Julia path and inside Julia, DataDeps provides the corresponding paths to the data and retrieves it from the defined source if needed. Furthermore, a hash can be defined as well to ensure that the provided data is identical to the expected one.\cite{White2019}\\
+%In the following paragraph, we will take a closer look at the original data and the individual changes that have been made to use those Datasets for the training process.
+%\subsection{Chemprot}
+%Chemprot is in a JSON lines file format provided. More precisely every line consists of a text and the corresponding label. A field for metadata exists as well but is most of the time not used. In its original format, the Chemprot corpus consists of a develop, test, and train set of which the develop, test, and train folder correspond to the identically named files inside the chemprot folder provided on the GitHub site of SciBERT. The difference arises from a database-like structure in which the Chemprot corpus is originally provided, in contrast to those subdivided information sets where for example the text itself is in another file than the positions and annotations. Those divided pieces of information were combined and are provided in a single file in the already mentioned format. \cite{Beltagy2019,Wang2016}
