Revised chapter Experiments (Language)

--- a/bericht/sections/experiments.tex
+++ b/bericht/sections/experiments.tex
@@ -12,8 +12,9 @@
 %	\item finetuning for 2 to 5 epochs 
 %\end{itemize}
 %\color{black}
-In the following, we will take a closer look at how the tasks already described conceptually are implemented. Since some tasks use the same architecture for the model, more precisely the identical architecture for the last layer as the all other always stay the same. We will first examine the classification tasks and then the labeling tasks in more detail. Thus, the order in which the tasks will follow will remain the same as before.\\
-Nevertheless, both task types will use a dropout of 0.1, cross-entropy for loss, and Adam as the optimizer, all following the instructions from the SciBERT paper.
+In this section we will look at replication in more detail and discuss the approach and possible deviations from the original paper. So first comes the basic structure, followed by going through some examples that show us what exactly which functions does and is supposed to show us if our implementation works as it should. After that we will briefly talk about the hardware that was used. This is followed by a more detailed discussion of our implementation. Then we will look at some of the more serious problems and finally we will look at the results obtained.
+
+Since the basic architecture for the underlying BERT model remains the same and does not change, we will only look at the task specific part. Furthermore, we restrict ourselves to the classification tasks and, to be more precise, to the REL task. The implementation consists of three main parts. They are the data acquisition and preprocessing, the area of the transformer itself and last but not least the evaluation of the model with the help of a score. Here we use the F\_1 score to follow the original paper in this area as well. 
 
 \subsection{Simple tests and examples}
 To ensure that these individual areas function correctly and that errors have not already sneaked in here. There are several outputs that show the functionality in a small scale and can ideally catch some errors. These outputs can be found in the Jupyter Notebook under Tests. In this section, the first record and the corresponding label of the training dataset are displayed first. The same is repeated for the test data set. After these examples, a dry run of the tokenizer follows. This is to assure us that the tokenize function, which puts the data into a form that the transformer can read, is working correctly. This is shown with a sentence that leads to the same result both by hand and by the function.  Next, the tokenization of special tokens is examined. This is to guarantee that the special tokens needed for the NER task are correctly recognized and translated. This is followed by some examples that test the functionality of the loss function and the embedding of the previously translated sentence. At this point, however, the verification of correctness becomes difficult, since the interpretation of the representation of the CLS token is no longer directly evaluable for humans. Although it can be shown that this process functions and presumably also operates correctly, this example no longer guarantees this.  This is followed by the tests that refer to the evaluation, in other words to the F1 score.Here we first consider whether the formats have been converted correctly so that the Metric package which is used for the calculation can read them and then we briefly compare whether the example delivers the expected F1 score. 
@@ -50,7 +51,6 @@ Since the data is already very close to the format that is necessary for the tra
 %Classic sequence classification tasks or text classification tasks, as they are called in the original paper, can be implemented in Julia without any particular challenges. Especially since the data is already available in a format that mostly only needs to be loaded and the task is only a transformation from a text to a single label. Together with the architecture for classification tasks already described, this makes the implementation of this task very easy. We just need to combine Bert and the classification layer and provide this model with the text and the label in the correct formats. This means, on the one hand, adding the "[CLS]" and "[SEP]" tokens to the text after preparing the text with the tokenizer and wordpiece and, on the other hand, preparing the labels in a format that can be read by the model, which transforms them into a "OneHotMatrix" for "Flux", corresponding to a one out of k representation per sequence.
 %\subsection{Relation Classification (REL)}
 
-\color{red}
 \subsection{Implementation of the replication}
 The first step, which belongs to the actual replication, is to rebuild the original transformer. For this we first need the basic model. We use Transformers.jl\cite{Cheng2020} for this task and some others that are still to come. This package includes some very helpful functions for handling transformers. These range from loss functions to wrappers that make it much easier to create new transformers. We therefore use Transformers.jl to load the base model and use set Classifier to replace the layers previously required for NSP and MLM with the ones we need. For the REL task, this means that the actual BERT architecture, as shown in the figure, should get an additional classifiaction layer. Here we use a dropout of 0.1 as described in the original paper. At this point we deviate somewhat from the original paper, which describes that the CLS layer is passed directly to the classifier layer. We realize this by using the loss function, which only passes forward the representation of the CLS token for the classification and not the representations of all individual tokens. We will discuss the loss function in more detail in the following. Another remark would be that here the classification layer is realized by a Dense layer using the Flux library. This layer can be seen as a fully connected one.  Now the optimizer is missing, which the same as in the orginal one also Adam. The batch size will be set to 1 due to the implementation here. This differs from the original paper which used 32. The main reason for this decision was that it created some problems using mini batches and so far not all of them could be solved. For this reason all following results will use a batch size of 1 or no batch. 
 
@@ -60,7 +60,7 @@ Apart from the loss, we need one more function, which is the function that compu
 Now only the actual training is missing. For this two loops are used, one corresponding to the epochs and the other to the index in the training dataset. At this point different statistics are calculated and saved for later analysis. These include memory usage, runtime and F1 score per epoch and loss for each training step. 
 
 This training process is then performed for several models as well as for different learning rates. This leads us then to our results. 
-\color{black} 
+
 \section{Complications}
 In the following, we briefly review some of the problems we have encountered during this work. The order follows that of the information flow in the model, starting with the input data and ending with the output. 
 
