Added further development

--- a/bericht/sections/discussion.tex
+++ b/bericht/sections/discussion.tex
@@ -6,3 +6,4 @@ But now we are getting back to the actual scores and here especially S2ORC-BERT 
 
 For the replication it can be summarized that especially the documentation and the examples for many Julia libraries used here are insufficient. Missing information may still be acceptable, but wrong or more precisely non-functioning examples will quickly lead you astray. Especially if currently working and non working examples are not separated and are even available in the same folder as examples. Although tests often offer a working example, in order to explicitly consider only these, it must be known that the normal documentation is not always reliable. Furthermore, the problem with the available hardware became apparent. Depending on the individual equipment, it is extremely difficult to investigate models of this size effectively. 
 \subsection{Further development}
+For future research two different goals can be followed. On the one hand, for highly specific tasks, model extensions like those pursued with OAG-BERT may be advisable. On the other hand, models that are specialized in a certain domain seem to perform better than models that have not been trained in this domain. This became very clear by the differences between BioBert, SciBERT and BERT. On the other hand, a model that does not specialize in a few domains, but instead has the later underlying domains as part of its training data set, may actually perform better than more specific ones. This would lead to the conclusion that in the future models should be trained on as general corpora as possible and then perform comparatively well with specialized models in a wide variety of environments. However, it should be noted that these would have the benefit of being able to perform comparably across various domains. 
