--- a/bericht/sections/experiments.tex
+++ b/bericht/sections/experiments.tex
@@ -61,7 +61,7 @@ Now only the actual training is missing. For this two loops are used, one corres
 
 This training process is then performed for several models as well as for different learning rates. This leads us then to our results. 
 
-\section{Complications}
+\subsection{Complications}
 In the following, we briefly review some of the problems we have encountered during this work. The order follows that of the information flow in the model, starting with the input data and ending with the output. 
 
 After this sequence the first problem is to transform the data, which contains already the two text sections that are marked with the special tokens "[\textless\textless]", "[\textgreater\textgreater]", "[~[[~]" and "[~]]~", these sentences must be processed by the tokenizer and by wordpiece, but without changing the mentioned tokens. If the individual sentences were processed without further precautions, the special tokens would be modified as well. However, due to this alteration, these tokens would no longer be interpreted as special tokens by the vocabulary, but would be seen as "normal" words. To avoid this, a wrapper was written that splits the text into partitions and processes them individually using the tokenizer and wordpiece. This was necessary primarily because partitions identified by a pair of corresponding special tokens might not have the same length after processing. Due to this potential variation in segment length, it is not directly possible to find the new position of the tokens based on the old one and simply add them manually. Instead, the individual sections separated by the special tokens are processed one by one and then the special tokens are placed in between the corresponding segments. This procedure is based on the addition of the "[CLS]" and "[SEP]" tokens in the CLS, but extends it. 
